--- a/acount_book/public/index.html
+++ b/acount_book/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumnail.png" />
+    <meta property="og:title" content="효영의 가계부" />
+    <meta property="og:description" content="나만의 작은 가계부" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>효영의 가계부</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
